syntax = "proto3";
option java_package = "com.workout.example";

service AccountBalanceService {
    rpc changeAccountBalance (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
    string codeAccount = 1;
    string amountOfBalanceChange = 2;
    string transferId = 3;
}

message MessageResponse {
    string status = 1;
    string message = 2;
}